[package]
name = "vstmommy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "78c84b75962af61393e67dabb122b28d2e968625", features = ["standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "78c84b75962af61393e67dabb122b28d2e968625" }

atomic_float = "0.1"
ebur128 = "0.1.7"
